crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_commonmark_type6_type7_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..91
  HTML_BLOCK_DIV@0..17
    HTML_BLOCK_TAG@0..6
      TEXT@0..4 "<div"
      TEXT@4..5 ">"
      NEWLINE@5..6 "\n"
    HTML_BLOCK_CONTENT@6..10
      TEXT@6..9 "foo"
      NEWLINE@9..10 "\n"
    HTML_BLOCK_TAG@10..17
      TEXT@10..16 "</div>"
      NEWLINE@16..17 "\n"
  PARAGRAPH@17..31
    TEXT@17..30 "trailing line"
    NEWLINE@30..31 "\n"
  BLANK_LINE@31..32
    BLANK_LINE@31..32 "\n"
  HTML_BLOCK_DIV@32..39
    HTML_BLOCK_TAG@32..39
      TEXT@32..38 "</div>"
      NEWLINE@38..39 "\n"
  PARAGRAPH@39..45
    EMPHASIS@39..44
      EMPHASIS_MARKER@39..40 "*"
      TEXT@40..43 "foo"
      EMPHASIS_MARKER@43..44 "*"
    NEWLINE@44..45 "\n"
  BLANK_LINE@45..46
    BLANK_LINE@45..46 "\n"
  PARAGRAPH@46..70
    INLINE_HTML@46..58
      INLINE_HTML_CONTENT@46..58 "<a href=\"x\">"
    NEWLINE@58..59 "\n"
    EMPHASIS@59..64
      EMPHASIS_MARKER@59..60 "*"
      TEXT@60..63 "bar"
      EMPHASIS_MARKER@63..64 "*"
    NEWLINE@64..65 "\n"
    INLINE_HTML@65..69
      INLINE_HTML_CONTENT@65..69 "</a>"
    NEWLINE@69..70 "\n"
  BLANK_LINE@70..71
    BLANK_LINE@70..71 "\n"
  HTML_BLOCK_DIV@71..91
    HTML_BLOCK_TAG@71..77
      TEXT@71..75 "<div"
      TEXT@75..76 ">"
      NEWLINE@76..77 "\n"
    HTML_BLOCK_CONTENT@77..84
      NEWLINE@77..78 "\n"
      TEXT@78..82 "*md*"
      NEWLINE@82..83 "\n"
      NEWLINE@83..84 "\n"
    HTML_BLOCK_TAG@84..91
      TEXT@84..90 "</div>"
      NEWLINE@90..91 "\n"
