crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_same_line_trailing_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..44
  HTML_BLOCK_DIV@0..14
    HTML_BLOCK_TAG@0..5
      TEXT@0..4 "<div"
      TEXT@4..5 ">"
    PLAIN@5..8
      TEXT@5..8 "foo"
    HTML_BLOCK_TAG@8..14
      TEXT@8..14 "</div>"
  PARAGRAPH@14..18
    TEXT@14..17 "bar"
    NEWLINE@17..18 "\n"
  BLANK_LINE@18..19
    BLANK_LINE@18..19 "\n"
  HTML_BLOCK_DIV@19..40
    HTML_BLOCK_TAG@19..31
      TEXT@19..23 "<div"
      WHITESPACE@23..24 " "
      HTML_ATTRS@24..30
        TEXT@24..30 "id=\"x\""
      TEXT@30..31 ">"
    PLAIN@31..34
      TEXT@31..34 "foo"
    HTML_BLOCK_TAG@34..40
      TEXT@34..40 "</div>"
  PARAGRAPH@40..44
    TEXT@40..43 "baz"
    NEWLINE@43..44 "\n"
