crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_incomplete_open_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..21
  PARAGRAPH@0..7
    TEXT@0..6 "<embed"
    NEWLINE@6..7 "\n"
  BLANK_LINE@7..8
    BLANK_LINE@7..8 "\n"
  PARAGRAPH@8..13
    TEXT@8..12 "<div"
    NEWLINE@12..13 "\n"
  BLANK_LINE@13..14
    BLANK_LINE@13..14 "\n"
  PARAGRAPH@14..21
    TEXT@14..20 "<table"
    NEWLINE@20..21 "\n"
